Updated the Tiff/Zarr Converter examples

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -1159,7 +1159,18 @@
     "# use cluster computing for different images\n",
     "# bounding box to crop the files in the conversion: [ymin, xmin, zmin, ymax, xmax, zmax]\n",
     "inputBbox = []\n",
-    "\n",
+    "# chunk size for the Zarr file. Note: If the xy dimensions of the image are \n",
+    "# too large, you may need to reduce the block size in the z dimension. \n",
+    "# This is because the converter loads the entire xy frames corresponding to \n",
+    "# the block size in z, even when readWholeTiff if false.\n",
+    "blockSize = [256, 256, 256]\n",
+    "# If true, read the entire Tiff file to RAM for the conversion. If false,\n",
+    "# use blockedImage to read partial images for the conversion to reduce RAM\n",
+    "# need, especially for large images. There are additional overhead when readWholeTiff is false.\n",
+    "# When flippedTile is true, or resampling or user-defined processing is defined, \n",
+    "# readWholeTiff will be set as true automatically.\n",
+    "readWholeTiff = True\n",
+    "# use cluster computing for different images\n",
     "parseCluster = False\n",
     "# master compute\n",
     "masterCompute = True\n",
@@ -1171,8 +1182,8 @@
     "configFile = ''\n",
     "\n",
     "XR_tiffToZarr_wrapper(dataPaths, resultDirName=resultDirName, channelPatterns=channelPatterns,\n",
-    "    inputBbox=inputBbox, parseCluster=parseCluster, masterCompute=masterCompute,\n",
-    "    cpusPerTask=cpusPerTask, mccMode=mccMode, configFile=configFile)\n",
+    "    inputBbox=inputBbox, blockSize=blockSize, readWholeTiff=readWholeTiff, parseCluster=parseCluster,\n",
+    "    masterCompute=masterCompute, cpusPerTask=cpusPerTask, mccMode=mccMode, configFile=configFile)\n",
     "\n",
     "# Now we will convert the zarr files we just made back into tiff files\n",
     "\n",
@@ -1242,7 +1253,7 @@
     "zarrFile = False\n",
     "# block size for the imaris file\n",
     "blockSize = [64, 64, 64]\n",
-    "\n",
+    "# use cluster computing for different images\n",
     "parseCluster = False\n",
     "# master compute\n",
     "masterCompute = True\n",
