Added Large-scale processing info to the examples notebook

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -117,6 +117,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The large-scale processing frameworks work for both slurm-based computing clusters and single workstations.\n",
+    "# For single workstations, if there are memory issues when processing relatively large images, we recommend converting\n",
+    "# the images to Zarr format, and using batch processing\n",
     "from PyPetaKit5D import XR_deskew_rotate_data_wrapper\n",
     "\n",
     "# Set your data path to our demo dataset\n",
