Added an Image List Generator tile_list example to the examples notebook

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -1272,6 +1272,70 @@
     "    parseCluster=parseCluster, masterCompute=masterCompute, cpusPerTask=cpusPerTask,\n",
     "    mccMode=mccMode, configFile=configFile);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f97fd6c-5348-4fdb-9d98-89655951c398",
+   "metadata": {},
+   "source": [
+    "## Create an image list from a tile_list using our demo dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "046e6c42-9cf0-4d96-afbe-ec2882cbf78e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PyPetaKit5D import XR_generate_image_list_wrapper\n",
+    "\n",
+    "# Set your data path to our demo dataset\n",
+    "dataPath = '~/Downloads/PetaKit5D_demo_cell_image_dataset/'\n",
+    "currDataPath = [dataPath]\n",
+    "# generation method\n",
+    "generationMethod = 'tile_list'\n",
+    "\n",
+    "tileFilenames = [\n",
+    "    'Scan_Iter_0000_0000_CamA_ch0_CAM1_stack0000_488nm_0000000msec_0106060251msecAbs_000x_003y_000z_0000t.tif',\n",
+    "    'Scan_Iter_0000_0000_CamA_ch0_CAM1_stack0000_488nm_0000000msec_0106082240msecAbs_000x_002y_000z_0000t.tif',\n",
+    "    'Scan_Iter_0000_0000_CamA_ch0_CAM1_stack0000_488nm_0000000msec_0106104333msecAbs_000x_001y_000z_0000t.tif',\n",
+    "    'Scan_Iter_0000_0000_CamA_ch0_CAM1_stack0000_488nm_0000000msec_0106126432msecAbs_000x_000y_000z_0000t.tif',\n",
+    "    'Scan_Iter_0000_0000_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106060251msecAbs_000x_003y_000z_0000t.tif',\n",
+    "    'Scan_Iter_0000_0000_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106082240msecAbs_000x_002y_000z_0000t.tif',\n",
+    "    'Scan_Iter_0000_0000_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106104333msecAbs_000x_001y_000z_0000t.tif',\n",
+    "    'Scan_Iter_0000_0000_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106126432msecAbs_000x_000y_000z_0000t.tif',\n",
+    "    'Scan_Iter_0000_0001_CamA_ch0_CAM1_stack0000_488nm_0000000msec_0106148492msecAbs_000x_003y_000z_0001t.tif',\n",
+    "    'Scan_Iter_0000_0001_CamA_ch0_CAM1_stack0000_488nm_0000000msec_0106170570msecAbs_000x_002y_000z_0001t.tif',\n",
+    "    'Scan_Iter_0000_0001_CamA_ch0_CAM1_stack0000_488nm_0000000msec_0106192817msecAbs_000x_001y_000z_0001t.tif',\n",
+    "    'Scan_Iter_0000_0001_CamA_ch0_CAM1_stack0000_488nm_0000000msec_0106215043msecAbs_000x_000y_000z_0001t.tif',\n",
+    "    'Scan_Iter_0000_0001_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106148492msecAbs_000x_003y_000z_0001t.tif',\n",
+    "    'Scan_Iter_0000_0001_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106170570msecAbs_000x_002y_000z_0001t.tif',\n",
+    "    'Scan_Iter_0000_0001_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106192817msecAbs_000x_001y_000z_0001t.tif',\n",
+    "    'Scan_Iter_0000_0001_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106215043msecAbs_000x_000y_000z_0001t.tif']\n",
+    "tileIndices = [\n",
+    "    [0, 0, 0, 3, 0],\n",
+    "    [0, 0, 0, 2, 0],\n",
+    "    [0, 0, 0, 1, 0],\n",
+    "    [0, 0, 0, 0, 0],\n",
+    "    [0, 1, 0, 3, 0],\n",
+    "    [0, 1, 0, 2, 0],\n",
+    "    [0, 1, 0, 1, 0],\n",
+    "    [0, 1, 0, 0, 0],\n",
+    "    [1, 0, 0, 3, 0],\n",
+    "    [1, 0, 0, 2, 0],\n",
+    "    [1, 0, 0, 1, 0],\n",
+    "    [1, 0, 0, 0, 0],\n",
+    "    [1, 1, 0, 3, 0],\n",
+    "    [1, 1, 0, 2, 0],\n",
+    "    [1, 1, 0, 1, 0],\n",
+    "    [1, 1, 0, 0, 0],\n",
+    "]\n",
+    "tileInterval = [0, 189.4, 0]\n",
+    "\n",
+    "XR_generate_image_list_wrapper(currDataPath, generationMethod, tileFilenames=tileFilenames,\n",
+    "                               tileIndices=tileIndices, tileInterval=tileInterval)\n"
+   ]
   }
  ],
  "metadata": {
