Added dataOrder to the Skewed Space Stitching Example

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -345,8 +345,11 @@
     "# check the setting files to see if a tile is flipped (bidirectional scan)\n",
     "parseSettingFile = False\n",
     "\n",
-    "# axis order\n",
+    "# axis order for the coordinates in the image list file\n",
     "axisOrder = '-x,y,z'\n",
+    "\n",
+    "# axis order for the image data\n",
+    "dataOrder = 'y,x,z'\n",
     "\n",
     "# stitch blending method, 'none': no blending, 'feather': feather blending\n",
     "BlendMethod = 'feather'\n",
@@ -425,7 +428,7 @@
     "\n",
     "\n",
     "XR_matlab_stitching_wrapper(dataPaths, ImageListFullpath,\n",
-    "    DS=DS, DSR=DSR, skewAngle=SkewAngle, reverse=Reverse, axisOrder=axisOrder,\n",
+    "    DS=DS, DSR=DSR, skewAngle=SkewAngle, reverse=Reverse, axisOrder=axisOrder, dataOrder=dataOrder,\n",
     "    xcorrShift=xcorrShift, channelPatterns=ChannelPatterns, primaryCh=PrimaryCh,\n",
     "    zarrFile=zarrFile, blockSize=blockSize, tileOffset=TileOffset, resampleType=resampleType,\n",
     "    resampleFactor=resample, xyPixelSize=xyPixelSize, dz=dz, \n",
