Added the bioformats converter and resave zarr wrappers

--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f97fd6c-5348-4fdb-9d98-89655951c398",
+   "id": "f6ee892a-f996-4a74-9d21-55288ade8085",
    "metadata": {},
    "source": [
     "## Create an image list from a tile_list using our demo dataset"
@@ -1296,6 +1296,7 @@
     "# Set your data path to our demo dataset\n",
     "dataPath = '~/Downloads/PetaKit5D_demo_cell_image_dataset/'\n",
     "currDataPath = [dataPath]\n",
+    "\n",
     "# generation method\n",
     "generationMethod = 'tile_list'\n",
     "\n",
@@ -1316,6 +1317,7 @@
     "    'Scan_Iter_0000_0001_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106170570msecAbs_000x_002y_000z_0001t.tif',\n",
     "    'Scan_Iter_0000_0001_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106192817msecAbs_000x_001y_000z_0001t.tif',\n",
     "    'Scan_Iter_0000_0001_CamB_ch0_CAM1_stack0000_488nm_0000000msec_0106215043msecAbs_000x_000y_000z_0001t.tif']\n",
+    "\n",
     "tileIndices = [\n",
     "    [0, 0, 0, 3, 0],\n",
     "    [0, 0, 0, 2, 0],\n",
@@ -1334,10 +1336,145 @@
     "    [1, 1, 0, 1, 0],\n",
     "    [1, 1, 0, 0, 0],\n",
     "]\n",
+    "\n",
     "tileInterval = [0, 189.4, 0]\n",
     "\n",
     "XR_generate_image_list_wrapper(currDataPath, generationMethod, tileFilenames=tileFilenames,\n",
-    "                               tileIndices=tileIndices, tileInterval=tileInterval)\n"
+    "    tileIndices=tileIndices, tileInterval=tileInterval)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2745cea2-d266-49fd-8103-7e6892e20e52",
+   "metadata": {},
+   "source": [
+    "## Resave zarr files using our demo dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fe22eae-c27a-4a1c-bb7e-07689192ddb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PyPetaKit5D import XR_resave_zarr_wrapper\n",
+    "\n",
+    "# This example demonstrates how to resave Zarr files with new chunking,\n",
+    "# batch sizes, or cropping using XR_resave_zarr_wrapper. This is useful for\n",
+    "# optimizing data layout for downstream processing or transferring large\n",
+    "# datasets between storage systems.\n",
+    "\n",
+    "# Input: One or more Zarr datasets\n",
+    "# Output: Resaved Zarr datasets with updated parameters\n",
+    "\n",
+    "# result file:\n",
+    "# {destPath}/PetaKit5D_demo_cell_image_dataset/zarr/resaved_zarr/\n",
+    "\n",
+    "# Root path to the dataset (example: one dataset path)\n",
+    "dataPath = '~/Downloads/PetaKit5D_demo_cell_image_dataset/'\n",
+    "dataPaths = [dataPath+'zarr/']\n",
+    "\n",
+    "# Name of the subdirectory for saving resaved Zarr files\n",
+    "resultDirName = 'resaved_zarr'\n",
+    "\n",
+    "# Batch size for processing [Y X Z]\n",
+    "batchSize = [512, 512, 512]\n",
+    "\n",
+    "# Block (chunk) size for writing Zarr outputs\n",
+    "blockSize = [512, 512, 512]\n",
+    "\n",
+    "# Channel patterns to include in processing\n",
+    "channelPatterns = ['CamA_ch0', 'CamB_ch0']\n",
+    "\n",
+    "# Optional: Input bounding box for cropping\n",
+    "# Format: [ymin, xmin, zmin, ymax, xmax, zmax]\n",
+    "inputBbox = []\n",
+    "\n",
+    "# Whether to submit jobs to SLURM cluster\n",
+    "parseCluster = False\n",
+    "\n",
+    "# Whether processing involves large files\n",
+    "largeFile = True\n",
+    "\n",
+    "# Whether the master job node participates in processing\n",
+    "masterCompute = True\n",
+    "\n",
+    "# Number of CPU cores per task (for SLURM)\n",
+    "cpusPerTask = 4\n",
+    "\n",
+    "# Optional: UUID string for temporary result paths\n",
+    "uuid = ''\n",
+    "\n",
+    "# Whether to run in MATLAB Compiler (MCC) mode\n",
+    "mccMode = False\n",
+    "\n",
+    "# Optional: SLURM config file path\n",
+    "configFile = ''\n",
+    "\n",
+    "XR_resave_zarr_wrapper(dataPaths, resultDirName=resultDirName, batchSize=batchSize,\n",
+    "    blockSize=blockSize, channelPatterns=channelPatterns, inputBbox=inputBbox,\n",
+    "    parseCluster=parseCluster, largeFile=largeFile, masterCompute=masterCompute,\n",
+    "    cpusPerTask=cpusPerTask, uuid=uuid, mccMode=mccMode, configFile=configFile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42ca608f-a8d7-458b-bb45-0db85cd4d174",
+   "metadata": {},
+   "source": [
+    "## Convert various microscopy data formats (.nd2 and .czi by default) to tiff or zarr in 3D (XYZ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3772a639-ce49-4b57-861f-e26b625c2007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: the demos below are only for illustration purposes, and not for actual running\n",
+    "raise ValueError('Remove this line and use your own data if you wish to run this demo')\n",
+    "\n",
+    "from PyPetaKit5D import XR_bioformats_to_tiff_or_zarr_wrapper\n",
+    "\n",
+    "# Input: microscopy data files in .nd2 or .czi format. Other formats can be added as long as BioFormats can read the data.\n",
+    "# Output: converted TIFF or Zarr datasets stored in the specified directory\n",
+    "\n",
+    "# Note: this demo will not run as no demo image is provided. Users can\n",
+    "# adapt it to their images. \n",
+    "\n",
+    "# Input data paths (single file or multiple)\n",
+    "dataPaths = ['/data/microscopy/sample_dataset_1/']\n",
+    "\n",
+    "# Directory name where results will be stored (relative to each data file’s folder)\n",
+    "resultDirName = 'tiffs'\n",
+    "\n",
+    "# File patterns to match channels\n",
+    "channelPatterns = ['.nd2', '.czi']\n",
+    "\n",
+    "# Number of channels in the dataset\n",
+    "nChannels = 2\n",
+    "\n",
+    "# Supported data formats (Bio-Formats compatible). Other formats can be added as long as Bio-Formats can read data.\n",
+    "dataFormats = ['.nd2', '.czi']\n",
+    "\n",
+    "# Whether to save Zarr instead of TIFF\n",
+    "saveZarr = False\n",
+    "\n",
+    "# Chunk/block size for Zarr output [Y X Z]\n",
+    "blockSize = [256, 256, 256]\n",
+    "\n",
+    "# Whether to overwrite existing results\n",
+    "overWrite = False\n",
+    "\n",
+    "# Optional unique identifier for temporary output folders\n",
+    "uuid = ''\n",
+    "\n",
+    "# Run the conversion\n",
+    "XR_bioformats_to_tiff_or_zarr_wrapper(dataPaths, resultDirName=resultDirName,\n",
+    "    channelPatterns=channelPatterns, nChannels=nChannels, dataFormats=dataFormats,\n",
+    "    saveZarr=saveZarr, blockSize=blockSize, overWrite=overWrite, uuid=uuid)"
    ]
   }
  ],
@@ -1357,7 +1494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
